<resources>
    <string name="app_name">OperationSafeRide</string>
    <string name="action_settings">Settings</string>
    <string name="request_ride"><u>Request Ride</u></string>
    <string name="name_message">Name: </string>
    <string name="name_hint">Name</string>
    <string name="ID_message">ID: </string>
    <string name="ID_hint">ID</string>
    <string name="guests_message"># of Guests: </string>
    <string name="guests_hint"># of Guests</string>
    <string name="location_message">Location: </string>
    <string name="location_hint">Location</string>
    <string name="cancel_button">Cancel</string>
    <string name="request_button">Request</string>
    <string name="phone_message">Phone #:</string>
    <string name="phone_hint">Phone Number</string>
    <string name="help">Help</string>
    <string name="map">Map</string>
</resources>

