<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="35sp"
        android:layout_height="wrap_content"
        android:text="@string/request_ride"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:text="@string/name_message"
            />
        <EditText android:id="@+id/name_text"
            android:layout_marginLeft="60dp"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:text="@string/ID_message"
            />
        <EditText android:id="@+id/id_text"
            android:layout_marginLeft="105dp"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="@string/ID_hint"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:text="@string/guests_message"
            />
        <EditText android:id="@+id/guests_text"
            android:layout_marginLeft="0dp"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="@string/guests_hint"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:text="@string/location_message"
            />
        <EditText android:id="@+id/location_text"
            android:layout_marginLeft="35dp"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="@string/location_hint"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginLeft="70dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/car_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/car"/>
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:onClick="cancelRequest"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/cancel_button"/>
        <Button
            android:id="@+id/request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:onClick="makeRequest"
            android:textSize="25sp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/request_button"/>
    </LinearLayout>
</LinearLayout>